--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
@@ -1,8 +1,142 @@
 ﻿@using Ganedata.Core.Entities.Domain
 @model List<Ganedata.Core.Entities.Domain.TenantDepartments>
 
+
+
+    <div class="hidden-md hidden-lg hidden-sm horizontal-menu">
+        <div class="row">
+            <div class="col-xs-7">
+                <div id="logo-mobile" class="ui-logo">
+                    <a href="@Url.Action("Index","Home")">
+                        <img src="/Areas/Shop/Content/app/img/logo.png" title="SmartShop Multistore" alt="SmartShop Multistore" class="img-responsive" />
+                    </a>
+                </div>
+            </div>
+            <div class="col-xs-5 ">
+                <div id="top-links-menu" class="text-right top-menu-links col-sm-12 col-lg-2">
+                    <ul class="list-inline">
+                        <li class="dropdown user_menu">
+                            <a href="#" title="@(ViewBag.UserName == " " ? "My Account" : ViewBag.UserName)" class="dropdown-toggle" data-toggle="dropdown">
+                                <svg width="24px" height="24px">
+                                    <use xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#user"></use>
+                                </svg>
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-right user_account user-fa-icons">
+                                @if (@ViewBag.LoginDetail == "Login")
+                                {
+                                    <li><a href="@Url.Action("Create","User")"><i class="fa fa-user-plus"></i>Register</a></li>
+                                }
+                                else
+                                {
+                                    <li><a href="@Url.Action("Account","User")"><i class="fa fa-user"></i>@ViewBag.UserName</a></li>
+                                    <li><a href="@Url.Action("OrderHistory","User")"><i class="fa fa-cart-arrow-down"></i>Order History</a></li>
+                                    <li><a href="@Url.Action("WishList","User")"><i class="fa fa-heart"></i>Wish List</a></li>
+                                }
+
+                                @if (@ViewBag.LoginDetail == "Login")
+                                {
+                                    <li><a href="@Url.Action("login", "User")"><i class="fa fa-sign-in"></i>Login</a></li>
+                                }
+                                else
+                                {
+                                    <li><a href="@Url.Action("logout", "User")"><i class="fa fa-sign-out"></i>Logout</a></li>
+                                }
+                            </ul>
+                        </li>
+                        <li id="cart-mobile" class="cart-menu">
+                            <button type="button" data-toggle="dropdown" data-loading-text="Loading..." class="btn btn-lg dropdown-toggle">
+                                <svg width="28px" height="26px">
+                                    <use xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#hcart"></use>
+                                </svg>
+                                <span id="cart-total-mobile">@(ViewBag.CartItemCount == 0 ? 0 : ViewBag.CartItemCount)</span>
+                            </button>
+                            <ul id="cart-dropdown-menu" class="dropdown-menu  cart-menu-height" style="overflow:auto">
+                                @if (ViewBag.CartItemCount != 0)
+                                {
+                                    <li>
+                                        <table>
+                                            <tbody>
+                                                @foreach (var item in ViewBag.CartItems)
+                                                {
+                                                    <tr>
+
+                                                        <td><a href="@Url.Action("AddToCart","Products")"><img src=@(!string.IsNullOrEmpty(item.ProductMaster.DefaultImage)? ViewBag.BaseFilePath + item.ProductMaster.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif") alt="@(item?.ProductMaster?.Name)"></a></td>
+                                                        <td>
+                                                            <div class="ordered-items">
+                                                                <p>
+                                                                    <a href="@Url.Action("AddToCart","Products")">@(item.ProductMaster?.Name)<br /><span style="font-weight:bold;">Sku:</span>@(item.ProductMaster?.SKUCode)<br /><span style="font-weight:bold;">Qty:</span>@(item.Qty)</a>
+                                                                </p>
+
+                                                                @*<ul>
+                                                                    <li>
+                                                                        Sku: <span>@(item.ProductMaster?.SKUCode)</span>
+                                                                    </li>
+                                                                    <li>Size: <span>M</span></li>
+                                                                    <li>
+                                                                        Quantity: <span>@item.Qty</span>
+                                                                    </li>
+                                                                </ul>*@
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                }
+                                            </tbody>
+                                        </table>
+                                        @* <a href="@Url.Action("AddToCart","Products")">Go to shopping cart</a>*@
+                                    </li>
+                                }
+                                else
+                                {
+                                    <li>
+                                        <p class="text-center">Your Basket is empty!</p>
+                                    </li>
+                                }
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div id="search-by-category" class="search-by-category">
+            <div class="search-container">
+
+                <div class="search-box input-group">
+                    <input type="text" name="search" id="text-search-mobile" value="" placeholder="Search" class="text-search" />
+                    <div id="sp-btn-search" class="input-group-btn">
+                        <button type="button" id="btn-search-category" class="btn btn-search-category">Search</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="mobileMenu" class="sidenav">
+            <div class="close-nav">
+                <span class="categories">Category</span>
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fa fa-close"></i></a>
+            </div>
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav">
+                    @if (ViewBag.departments != null)
+                    {
+                        var department = ViewBag.departments as List<TenantDepartments>;
+                        foreach (var item in department)
+                        {
+                            <li><a href="@Url.Action("_GetProductByGroupsAndDepartment", "Home", new { DepartmentId = item.DepartmentName })">@item.DepartmentName</a></li>
+                        }
+                    }
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
 <div id='main-menu' class='main-menu headerMenu'>
     <nav class='navigation'>
+        <span class='hamburger-menu'>
+            Deparments
+            <span class='burger-1'></span>
+            <span class='burger-2'></span>
+            <span class='burger-3'></span>
+        </span>
         <ul class='core-menu'>
 
             @foreach (var item in Model)
@@ -28,21 +162,21 @@
                                         <li>
                                             <a href="@Url.Action("ProductCategories", "Products", new { productGroup = groupDepartment[i].ProductGroup })">
                                                 @groupDepartment[i].ProductGroup
-                                            @if (groupDepartment[i].ProductCategories.Count > 0)
-                                            {
-                                                <span class='toggle2'></span>
-                                            }
-                                        </a>
-                                        <ul class='dropdown2'>
-                                            @foreach (var categories in @groupDepartment[i].ProductCategories)
-                                            {
-                                                <li><a href="@Url.Action("ProductCategories", "Products", new { SubCategory = categories.ProductCategoryName })"> @categories.ProductCategoryName</a> </li>
-                                            }
-                                        </ul>
-                                    </li>
+                                                @if (groupDepartment[i].ProductCategories.Count > 0)
+                                                {
+                                                    <span class='toggle2'></span>
+                                                }
+                                            </a>
+                                            <ul class='dropdown2'>
+                                                @foreach (var categories in @groupDepartment[i].ProductCategories)
+                                                {
+                                                    <li><a href="@Url.Action("ProductCategories", "Products", new { SubCategory = categories.ProductCategoryName })"> @categories.ProductCategoryName</a> </li>
+                                                }
+                                            </ul>
+                                        </li>
 
 
-                                }
+                                    }
                                     @if (groupDepartment.ElementAtOrDefault(i + 1) != null)
                                     {
 
@@ -95,134 +229,7 @@
         </ul>
     </nav>
 </div>
-<div class="hidden-md hidden-lg hidden-sm horizontal-menu">
-    <div class="row">
-        <div class="col-xs-7">
-            <div class="navbar-header">
-                <!-- <span id="category" class="visible-xs">All Categories</span> -->
-                <button type="button" class="btn btn-navbar navbar-toggle" onclick="openNav()" data-toggle="collapse" data-target=".navbar-ex1-collapse"><i class="fa fa-bars"></i></button>
-            </div>
-            <div id="logo-mobile" class="ui-logo">
-                <a href="@Url.Action("Index","Home")">
-                    <img src="/Areas/Shop/Content/app/img/logo.png" title="SmartShop Multistore" alt="SmartShop Multistore" class="img-responsive" />
-                </a>
-            </div>
-        </div>
-        <div class="col-xs-5 ">
-            <div id="top-links-menu" class="text-right top-menu-links col-sm-12 col-lg-2">
-                <ul class="list-inline">
-                    <li class="dropdown user_menu">
-                        <a href="#" title="@(ViewBag.UserName == " " ? "My Account" : ViewBag.UserName)" class="dropdown-toggle" data-toggle="dropdown">
-                            <svg width="24px" height="24px">
-                                <use xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#user"></use>
-                            </svg>
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-right user_account user-fa-icons">
-                            @if (@ViewBag.LoginDetail == "Login")
-                            {
-                                <li><a href="@Url.Action("Create","User")"><i class="fa fa-user-plus"></i>Register</a></li>
-                            }
-                            else
-                            {
-                                <li><a href="@Url.Action("Account","User")"><i class="fa fa-user"></i>@ViewBag.UserName</a></li>
-                                <li><a href="@Url.Action("OrderHistory","User")"><i class="fa fa-cart-arrow-down"></i>Order History</a></li>
-                                <li><a href="@Url.Action("WishList","User")"><i class="fa fa-heart"></i>Wish List</a></li>
-                            }
 
-                            @if (@ViewBag.LoginDetail == "Login")
-                            {
-                                <li><a href="@Url.Action("login", "User")"><i class="fa fa-sign-in"></i>Login</a></li>
-                            }
-                            else
-                            {
-                                <li><a href="@Url.Action("logout", "User")"><i class="fa fa-sign-out"></i>Logout</a></li>
-                            }
-                        </ul>
-                    </li>
-                    <li id="cart-mobile" class="cart-menu">
-                        <button type="button" data-toggle="dropdown" data-loading-text="Loading..." class="btn btn-lg dropdown-toggle">
-                            <svg width="28px" height="26px">
-                                <use xlink:href="/Areas/Shop/Content/app/img/icons/icons.svg#hcart"></use>
-                            </svg>
-                            <span id="cart-total-mobile">@(ViewBag.CartItemCount == 0 ? 0 : ViewBag.CartItemCount)</span>
-                        </button>
-                        <ul id="cart-dropdown-menu" class="dropdown-menu  cart-menu-height" style="overflow:auto">
-                            @if (ViewBag.CartItemCount != 0)
-                            {
-                                <li>
-                                    <table>
-                                        <tbody>
-                                            @foreach (var item in ViewBag.CartItems)
-                                            {
-                                                <tr>
-
-                                                    <td><a href="@Url.Action("AddToCart","Products")"><img src=@(!string.IsNullOrEmpty(item.ProductMaster.DefaultImage)? ViewBag.BaseFilePath + item.ProductMaster.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif") alt="@(item?.ProductMaster?.Name)"></a></td>
-                                                    <td>
-                                                        <div class="ordered-items">
-                                                            <p>
-                                                                <a href="@Url.Action("AddToCart","Products")">@(item.ProductMaster?.Name)<br /><span style="font-weight:bold;">Sku:</span>@(item.ProductMaster?.SKUCode)<br /><span style="font-weight:bold;">Qty:</span>@(item.Qty)</a>
-                                                            </p>
-
-                                                            @*<ul>
-                                                                    <li>
-                                                                        Sku: <span>@(item.ProductMaster?.SKUCode)</span>
-                                                                    </li>
-                                                                    <li>Size: <span>M</span></li>
-                                                                    <li>
-                                                                        Quantity: <span>@item.Qty</span>
-                                                                    </li>
-                                                                </ul>*@
-                                                        </div>
-                                                    </td>
-                                                </tr>
-                                            }
-                                        </tbody>
-                                    </table>
-                                    @* <a href="@Url.Action("AddToCart","Products")">Go to shopping cart</a>*@
-                                </li>
-                            }
-                            else
-                            {
-                                <li>
-                                    <p class="text-center">Your Basket is empty!</p>
-                                </li>
-                            }
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div id="search-by-category" class="search-by-category">
-        <div class="search-container">
-
-            <div class="search-box input-group">
-                <input type="text" name="search" id="text-search-mobile" value="" placeholder="Search" class="text-search" />
-                <div id="sp-btn-search" class="input-group-btn">
-                    <button type="button" id="btn-search-category" class="btn btn-search-category">Search</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="mobileMenu" class="sidenav">
-        <div class="close-nav">
-            <span class="categories">Category</span>
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"><i class="fa fa-close"></i></a>
-        </div>
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav">
-                @if (ViewBag.departments != null)
-                {
-                    var department = ViewBag.departments as List<TenantDepartments>;
-                    foreach (var item in department)
-                    {
-                        <li><a href="@Url.Action("_GetProductByGroupsAndDepartment", "Home", new { DepartmentId = item.DepartmentName })">@item.DepartmentName</a></li>
-                    }
-                }
-            </ul>
-        </div>
-    </div>
-</div>
 
 <script>
     $(document).ready(function () {
