modify search input in mobile view Imported from Changeset 2393

--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
@@ -3,40 +3,39 @@
 
 
 
-    <div class="hidden-md hidden-lg hidden-sm horizontal-menu">
-        <div class="row">
-            <div class="col-xs-7">
-                <div id="logo-mobile" class="ui-logo">
-                    <a href="@Url.Action("Index","Home")">
-                        <img src="/Areas/Shop/Content/app/img/logo.png" title="SmartShop Multistore" alt="SmartShop Multistore" class="img-responsive" />
-                    </a>
-                </div>
-            </div>
-            <div class="col-xs-5 ">
-                <div id="top-links-menu" class="text-right top-menu-links col-sm-12 col-lg-2">
-                    <ul class="list-inline">
-                        <li class="dropdown user_menu">
-                            @Html.Action("_UserMenuPartial")
-                        </li>
-                        <li id="cart-mobile" class="cart-menu">
-                            @Html.Action("_CartMenuPartial")
-                        </li>
-                    </ul>
-                </div>
+<div class="hidden-md hidden-lg hidden-sm horizontal-menu">
+    <div class="row">
+        <div class="col-xs-7">
+            <div id="logo-mobile" class="ui-logo">
+                <a href="@Url.Action("Index","Home")">
+                    <img src="/Areas/Shop/Content/app/img/logo.png" title="SmartShop Multistore" alt="SmartShop Multistore" class="img-responsive" />
+                </a>
             </div>
         </div>
-        <div id="search-by-category" class="search-by-category">
-            <div class="search-container">
-
-                <div class="search-box input-group">
-                    <input type="text" name="search" id="text-search-mobile" value="" placeholder="Search" class="text-search" />
-                    <div id="sp-btn-search" class="input-group-btn">
-                        <button type="button" id="btn-search-category" class="btn btn-search-category">Search</button>
-                    </div>
+        <div class="col-xs-5 ">
+            <div id="top-links-menu" class="text-right top-menu-links col-sm-12 col-lg-2">
+                <ul class="list-inline">
+                    <li class="dropdown user_menu">
+                        @Html.Action("_UserMenuPartial")
+                    </li>
+                    <li id="cart-mobile" class="cart-menu">
+                        @Html.Action("_CartMenuPartial")
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div id="search-by-category" class="search-by-category">
+        <div class="search-container">
+            <div class="search-box input-group">
+                <input type="text" name="search" id="text-search" value="" placeholder="Search" class="text-search" />
+                <div id="sp-btn-search" class="input-group-btn">
+                    <button type="button" id="btn-search-category" class="btn btn-search-category" onclick="SearchProductCategory();">Search</button>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
 
 <div id='main-menu' class='main-menu headerMenu'>
