modify search input on header Imported from Changeset 2394

--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_HorizontalNavbarPartial.cshtml
@@ -28,7 +28,7 @@
     <div id="search-by-category" class="search-by-category">
         <div class="search-container">
             <div class="search-box input-group">
-                <input type="text" name="search" id="text-search" value="" placeholder="Search" class="text-search" />
+                <input type="text" name="search" value="" placeholder="Search" class="text-search" />
                 <div id="sp-btn-search" class="input-group-btn">
                     <button type="button" id="btn-search-category" class="btn btn-search-category" onclick="SearchProductCategory();">Search</button>
                 </div>
