--- a/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Areas/Shop/Views/Shared/_TopHeaderPartial.cshtml
@@ -27,7 +27,7 @@
                             </div>
                         </div>
                         <div class="search-box input-group">
-                            <input type="text" name="search" id="text-search" value="" placeholder="Search" class="text-search" />
+                            <input type="text" name="search" value="" placeholder="Search" class="text-search" />
                             <div id="sp-btn-search" class="input-group-btn">
                                 <button type="button" id="btn-search-category" class="btn btn-search-category" onclick="SearchProductCategory();">Search</button>
                             </div>
